@@ -74,7 +74,7 @@ if {$tcl_platform(platform) == "windows"
 package forget app-tkchat	;# Workaround until I can convince people
 ;# that apps are not packages.	:)  DGP
 package provide app-tkchat \
-    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.247 $}]
+    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.248 $}]
 
 # Maybe exec a user defined preload script at startup (to set Tk options,
 # for example.
@@ -106,7 +106,7 @@ namespace eval ::tkchat {
     variable HOST http://mini.net
 
     variable HEADUrl {http://cvs.sourceforge.net/viewcvs.py/tcllib/tclapps/apps/tkchat/tkchat.tcl?rev=HEAD}
-    variable rcsid   {$Id: tkchat.tcl,v 1.247 2004/12/08 19:28:40 rmax Exp $}
+    variable rcsid   {$Id: tkchat.tcl,v 1.248 2004/12/09 08:38:53 pascalscheffers Exp $}
 
     variable MSGS
     set MSGS(entered) [list \
@@ -5682,7 +5682,13 @@ proc tkjabber::connect { } {
     variable conn
     variable reconnect
     variable conference
+    variable reconnectTimer
     global Options
+
+    if { $reconnectTimer ne "" } {
+	after cancel $reconnectTimer
+	set reconnectTimer ""
+    }
     
     set conference $Options(JabberConference)
         
@@ -6654,6 +6660,11 @@ proc ::tkjabber::TwiddlePort {} {
 proc ::tkjabber::scheduleReconnect {} {
     variable reconnectTimer
     variable connectionRetryTime
+    
+    if { $reconnectTimer ne "" } {
+	log::log debug "Already trying to reconnect..."
+	return
+    }
     
     tkchat::addSystem "Will try to reconnect in $connectionRetryTime seconds."
     set reconnectTimer [after [expr {$connectionRetryTime*1000}] tkjabber::connect]
